add docs for read_history.go
